# deep_research_agent_langgraph

./: .env_example  .gitignore  CHANGELOG.md  README.md  README_DB.md  deep_research_agent_langgraph.bat  pyproject.toml  requirements.txt  run_api_server.py  run_gui.py  start_all.bat  start_all_new.bat  start_api_server.bat  start_gui.bat  start_html_gui.bat  test_menu_display.bat  取り扱い手順書.md
examples/: __init__.py  api_usage_with_chat_gui.py  example_usage copy.py
gui/: README.md  index.html
gui/css/: style.css
gui/js/: api.js  app.js  ui.js
output/: report_CursorでGitHubを使う手順を教えてください__20260103_180435.md  report_LangGraphについて調査してください_20251228_102423.md  report_Langchainについて調査してください__20251228_173549.md  report_https___zenn_dev_weebo_article_20251228_181921.md  report_医療用質量分析計i601について調査してください__20251228_173837.md  report_高性能なAI Agentを開発したいです__最新のAI_Ag_20251228_174407.md
spec_doc/: API仕様書.md  GUI要件定義書.md  テスト仕様書.md  データモデル定義書.md  プロンプト設計書.md  基本設計書.md  要求定義書.md  詳細設計書.md  開発計画.md
src/: __init__.py
src/api/: __init__.py  main.py  middleware.py  research_manager.py  schemas.py  streaming.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  crud.py  database.py  models.py
src/graph/: __init__.py  edges.py  graph_builder.py  state.py
src/nodes/: __init__.py  researcher.py  reviewer.py  supervisor.py  writer.py
src/prompts/: __init__.py  reviewer_prompt.py  supervisor_prompt.py  (+1 more)
tests/: __init__.py  test_api.py  test_data_models.py  test_e2e_api.py  test_graph.py  test_integration.py  test_mock_llm.py  test_nodes.py  test_pdf_japanese.py
(+20 files in other folders)
